# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-queryforge"
version = "0.1.0"
description = "Queryforge environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.1",
    # SQL execution engine (in-memory, no external deps)
    "duckdb>=0.10.0",
    # AI judge — quality scoring via Anthropic API
    "anthropic>=0.25.0",
    # Interactive demo UI (mounted at /demo on the FastAPI server)
    "gradio>=4.0.0",
    # Inference script uses the OpenAI client
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m queryforge.server.app
server = "queryforge.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["queryforge", "queryforge.server"]
package-dir = { "queryforge" = ".", "queryforge.server" = "server" }
